# DDNS

./: Cargo.toml
DDNS-Client/: Cargo.toml
DDNS-Client/src/: cli.rs  main.rs  parser.rs
DDNS-Core/: Cargo.toml  build.rs
DDNS-Core/examples/: dns_manage.rs  list_records.rs  list_zones.rs
DDNS-Core/proto/: communicate.proto
DDNS-Core/src/: error.rs  lib.rs
DDNS-Core/src/providers/: mod.rs
DDNS-Server/: Cargo.toml
DDNS-Server/src/: cli.rs  main.rs  parser.rs
