[workspace.package]
version = "0.1.0"
edition = "2024"
[workspace]
members = ["DDNS-Client", "DDNS-Core", "DDNS-Server"]
resolver = "2"
default-members = ["DDNS-Client"]
[workspace.dependencies]
anyhow = "1.0.99"
public-ip-address = "0.3.5"
reqwest = "0.12.22"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.14.1"
tonic-types = "0.14.1"
thiserror = "2.0.14"
ddns-core = { path = "./DDNS-Core" }