[workspace.package]
version = "0.1.0"
edition = "2024"
[workspace]
members = ["DDNS-Client", "DDNS-Core", "DDNS-Server"]
resolver = "2"
default-members = ["DDNS-Client"]
[workspace.dependencies]
anyhow = "1.0.99"
public-ip-address = "0.3.5"
reqwest = "0.12.22"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.14.1"
tonic-types = "0.14.1"
thiserror = "2.0.14"
ddns-core = { path = "./DDNS-Core" }
argh = "0.1.13"
secrecy = "0.10.3"
cliclack = "0.3.6"
atty = "0.2.14"
rand = "0.9.2"
base64 = "0.22.1"
argon2 = "0.5.3"
prost = "0.14.1"
tonic-prost = "0.14.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
chrono = { version = "0.4.41", features = ["serde"] }