[package]
name = "ddns-client"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
ddns-core = { workspace = true }
argh = { workspace = true }
secrecy = { workspace = true }
cliclack = { workspace = true }
atty = { workspace = true }
tonic = { workspace = true }