[package]
name = "ddns-core"
version = { workspace = true }
edition = { workspace = true }

[features]
ddns-client = []
ddns-server = []

[dependencies]
anyhow = { workspace = true }
public-ip-address = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true }
prost = "0.14.1"
tonic-prost = "0.14.1"
[build-dependencies]
tonic-prost-build = "0.14.1"
