[package]
name = "ddns-core"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
public-ip-address = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true, features = ["tls-ring", "tls-native-roots", "tls-webpki-roots"] }
tonic-types = { workspace = true }
prost = { workspace = true }
tonic-prost = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.1"
[features]
provider-cloudflare = []
[dev-dependencies]
ddns-core = { path = "../DDNS-Core", features = ["provider-cloudflare"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
