[package]
name = "ddns-server"
version = "0.1.0"
edition = "2024"

[dependencies]
ddns-core = { workspace = true, features = ["provider-cloudflare"] }
anyhow = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
argh = { workspace = true }
tonic = { workspace = true }
sqlx = { version = "0.8.6", default-features = false, features = ["sqlite", "macros", "chrono"] }
